k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruanks
  namespace: ruanks
  labels:
    app: ruanks
spec:
  type: NodePort
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 8766
      targetPort: 8766
      nodePort: 30080
      protocol: TCP
  selector:
    app: ruanks
